--- a/package.json
+++ b/package.json
@@ -18,17 +18,24 @@
     "homepage": "https://github.com/rse/microkernel-mod-config",
     "bugs":     "https://github.com/rse/microkernel-mod-config/issues",
     "dependencies": {
-        "fs-promise":              "~0.5.0",
-        "js-yaml":                 "~3.6.1",
-        "co":                      "~4.6.0"
+        "fs-promise":               "~0.5.0",
+        "js-yaml":                  "~3.6.1",
+        "co":                       "~4.6.0"
+    },
+    "devDependencies": {
+        "babel-cli":                "~6.14.0",
+        "babel":                    "~6.5.2",
+        "babel-preset-es2015":      "~6.14.0",
+        "babel-eslint":             "~6.1.2",
+        "eslint":                   "~3.6.0"
     },
     "peerDependencies": {
-        "microkernel":             "*",
-        "microkernel-mod-ctx":     "*",
-        "microkernel-mod-options": "*"
+        "microkernel":              "*",
+        "microkernel-mod-ctx":      "*",
+        "microkernel-mod-options":  "*"
     },
     "scripts": {
-        "prepublish": "jshint microkernel-mod-config.js && babel --presets es2015 microkernel-mod-config.js >microkernel-mod-config.js5"
+        "prepublish": "eslint --config eslint.json microkernel-mod-config.js && babel --presets es2015 microkernel-mod-config.js >microkernel-mod-config.js5"
     },
     "main": "microkernel-mod-config.js5"
 }
